New: Section logo-carousel and Section Benefits

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="title"> <a href="">Free Courses 🌟 Sale Ends Soon, Get It Now  <img src="assets/icons/i.png" alt="icon"></a> </div>
       <nav>
       <ul class="navigation">
-        <li class="logo"><img src="assets/icons/Logo.png" alt="logo"></li>
+        <li class="logo"><img src="assets/icons/shape-17.png" alt="logo"></li>
         <li> <a href="#">Home</a> </li>
         <li> <a href="">Courses</a> </li>
         <li> <a href="">About Us</a> </li>
@@ -47,6 +47,37 @@
           <a href="#" class="btn btn-outline">View Pricing</a>
         </div>
       </div>
+    </section>
+
+    <section class="logo-carousel">
+      <a class="logos" href="#"><img src="assets/icons/Logo.png" alt=""></a>
+      <a class="logos" href="#"><img src="assets/icons/Logo (1).png" alt=""></a>
+      <a class="logos" href="#"><img src="assets/icons/Logo (2).png" alt=""></a>
+      <a class="logos" href="#"><img src="assets/icons/Logo (3).png" alt=""></a>
+      <a class="logos" href="#"><img src="assets/icons/Logo (4).png" alt=""></a>
+      <a class="logos" href="#"><img src="assets/icons/Logo (5).png" alt=""></a>
+      <a class="logos" href="#"><img src="assets/icons/Logo (6).png" alt=""></a>
+    </section>
+    <section class="image">
+      <img src="assets/photo/Container (1).png" alt="">
+    </section>
+
+    <section class="Benefits">
+      <div>
+        <div>
+          <h2>Benefits</h2>
+        <p>Lorem ipsum dolor sit amet consectetur. 
+          Tempus tincidunt etiam eget elit id imperdiet et. 
+          Cras eu sit dignissim lorem nibh et. Ac cum eget 
+          habitasse in velit fringilla feugiat senectus in.
+        </p>
+        </div>
+        <div>
+          <a href="#">View All</a>
+        </div>
+        
+      </div>
+
     </section>
     
   </body>
