Start: New Section features

--- a/index.html
+++ b/index.html
@@ -66,16 +66,56 @@
       <div>
         <div>
           <h2>Benefits</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. 
+        <p class="Lorem">Lorem ipsum dolor sit amet consectetur. 
           Tempus tincidunt etiam eget elit id imperdiet et. 
           Cras eu sit dignissim lorem nibh et. Ac cum eget 
           habitasse in velit fringilla feugiat senectus in.
         </p>
         </div>
-        <div>
+        <div class="link-Benefits">
           <a href="#">View All</a>
         </div>
         
+      </div>
+      <div class="boxses">
+
+      
+      <div class="Features">
+        <img class="number" src="assets/icons/Number.png" alt="1">
+        <h3>Flexible Learning Schedule</h3>
+        <p>Fit your coursework around your existing commitments and obligations.</p>
+        <a class="Arrow" href="#"><img src="assets/icons/Vector (Stroke).png" alt=""></a>
+      </div>
+      <div class="Features">
+        <img class="number" src="assets/icons/Number.png" alt="1">
+        <h3>Flexible Learning Schedule</h3>
+        <p>Fit your coursework around your existing commitments and obligations.</p>
+        <a class="Arrow" href="#"><img src="assets/icons/Vector (Stroke).png" alt=""></a>
+      </div>
+      <div class="Features">
+        <img class="number" src="assets/icons/Number.png" alt="1">
+        <h3>Flexible Learning Schedule</h3>
+        <p>Fit your coursework around your existing commitments and obligations.</p>
+        <a class="Arrow" href="#"><img src="assets/icons/Vector (Stroke).png" alt=""></a>
+      </div>
+      <div class="Features">
+        <img class="number" src="assets/icons/Number.png" alt="1">
+        <h3>Flexible Learning Schedule</h3>
+        <p>Fit your coursework around your existing commitments and obligations.</p>
+        <a class="Arrow" href="#"><img src="assets/icons/Vector (Stroke).png" alt=""></a>
+      </div>
+      <div class="Features">
+        <img class="number" src="assets/icons/Number.png" alt="1">
+        <h3>Flexible Learning Schedule</h3>
+        <p>Fit your coursework around your existing commitments and obligations.</p>
+        <a class="Arrow" href="#"><img src="assets/icons/Vector (Stroke).png" alt=""></a>
+      </div>
+      <div class="Features">
+        <img class="number" src="assets/icons/Number.png" alt="1">
+        <h3>Flexible Learning Schedule</h3>
+        <p>Fit your coursework around your existing commitments and obligations.</p>
+        <a class="Arrow" href="#"><img src="assets/icons/Vector (Stroke).png" alt=""></a>
+      </div>
       </div>
 
     </section>
