Add: Tow sections Courses and Testimonials

--- a/index.html
+++ b/index.html
@@ -222,5 +222,79 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="Our_Courses">
+        <div class="Our">
+          <h2>Our Testimonials</h2>
+          <p class="Lorem">
+            Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
+          </p>
+        </div>
+        <div class="Benefits link-Benefits">
+          <a href="#">View All</a>
+        </div>
+      </div>
+      <div class="testimonials-wrapper">
+      <div class="Testimonials">
+        <p>The web design course provided a solid foundation for me. The instructors were knowledgeable and supportive, and the interactive learning environment was engaging. I highly recommend it!</p>
+
+        <div class="div-clint">
+          <div>
+            <img src="assets/image/personal.png" alt="personal">
+            <p class="clint">Sarah L</p>
+          </div>
+          <a href="#">Read Full Story</a>
+        </div>
+      </div>
+      <div class="Testimonials">
+        <p>The UI/UX design course exceeded my expectations. The instructor's expertise and practical assignments helped me improve my design skills. I feel more confident in my career now. Thank you!</p>
+
+        <div class="div-clint">
+          <div>
+            <img src="assets/image/personal1.png" alt="personal">
+            <p class="clint">Jason M L</p>
+          </div>
+          <a href="#">Read Full Story</a>
+        </div>
+      </div>
+      <div class="Testimonials">
+        <p>The mobile app development course was fantastic! The step-by-step tutorials and hands-on projects helped me grasp the concepts easily. I'm now building my own app. Great course!</p>
+
+        <div class="div-clint">
+          <div>
+            <img src="assets/image/personal2.png" alt="personal">
+            <p class="clint">Emily R</p>
+          </div>
+          <a href="#">Read Full Story</a>
+        </div>
+      </div>
+      <div class="Testimonials">
+        <p>I enrolled in the graphic design course as a beginner, and it was the perfect starting point. The instructor's guidance and feedback improved my design abilities significantly. I'm grateful for this course!</p>
+
+        <div class="div-clint">
+          <div>
+            <img src="assets/image/personal3.png" alt="personal">
+            <p class="clint">Michael K</p>
+          </div>
+          <a href="#">Read Full Story</a>
+        </div>
+      </div>
+    </div>
+    </section>
+    <section>
+      <div class="Our_Courses">
+        <div class="Our">
+          <h2>Our Pricing</h2>
+          <p class="Lorem">
+            Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
+          </p>
+        </div>
+        <div class="Benefits link-Benefits">
+          <a class="Monthly" href="#">Monthly</a>
+          <a class="Yearly" href="#">Yearly</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
