Add: Tree Sections

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <nav>
         <ul class="navigation">
           <li class="logo"><img src="assets/icons/shape-17.png" alt="logo" /></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="">Courses</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Pricing</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="courses-page.html">Courses</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
           <li><a href="">Contact</a></li>
         </ul>
 
         <ul class="login">
-          <li><a href="">Sign Up</a></li>
+          <li><a href="sign-up.html">Sign Up</a></li>
           <li class="log"><a href="">Login</a></li>
         </ul>
       </nav>
@@ -184,7 +184,10 @@
               <p class="by">By Sarah Thompson</p>
             </div>
             <h3>Graphic Design for Beginners</h3>
-            <p>Discover the fundamentals of graphic design, including typography, color theory, layout design, and image manipulation techniques. Create visually stunning designs for print and digital media.</p>
+            <p>
+              Discover the fundamentals of graphic design, including typography, color theory, layout design, and image manipulation techniques. Create visually stunning designs for print and digital
+              media.
+            </p>
             <a href="#">Get it Now</a>
           </div>
         </div>
@@ -216,7 +219,10 @@
               <p class="by">By Jennifer Wilson</p>
             </div>
             <h3>Advanced JavaScript</h3>
-            <p>Take your JavaScript skills to the next level. Explore advanced concepts like closures, prototypes, asynchronous programming, and ES6 features. Build complex applications with confidence.</p>
+            <p>
+              Take your JavaScript skills to the next level. Explore advanced concepts like closures, prototypes, asynchronous programming, and ES6 features. Build complex applications with
+              confidence.
+            </p>
             <a href="#">Get it Now</a>
           </div>
         </div>
@@ -236,51 +242,59 @@
         </div>
       </div>
       <div class="testimonials-wrapper">
-      <div class="Testimonials">
-        <p>The web design course provided a solid foundation for me. The instructors were knowledgeable and supportive, and the interactive learning environment was engaging. I highly recommend it!</p>
+        <div class="Testimonials">
+          <p>
+            The web design course provided a solid foundation for me. The instructors were knowledgeable and supportive, and the interactive learning environment was engaging. I highly recommend it!
+          </p>
 
-        <div class="div-clint">
-          <div>
-            <img src="assets/image/personal.png" alt="personal">
-            <p class="clint">Sarah L</p>
+          <div class="div-clint">
+            <div>
+              <img src="assets/image/personal.png" alt="personal" />
+              <p class="clint">Sarah L</p>
+            </div>
+            <a href="#">Read Full Story</a>
           </div>
-          <a href="#">Read Full Story</a>
+        </div>
+        <div class="Testimonials">
+          <p>
+            The UI/UX design course exceeded my expectations. The instructor's expertise and practical assignments helped me improve my design skills. I feel more confident in my career now. Thank
+            you!
+          </p>
+
+          <div class="div-clint">
+            <div>
+              <img src="assets/image/personal1.png" alt="personal" />
+              <p class="clint">Jason M L</p>
+            </div>
+            <a href="#">Read Full Story</a>
+          </div>
+        </div>
+        <div class="Testimonials">
+          <p>The mobile app development course was fantastic! The step-by-step tutorials and hands-on projects helped me grasp the concepts easily. I'm now building my own app. Great course!</p>
+
+          <div class="div-clint">
+            <div>
+              <img src="assets/image/personal2.png" alt="personal" />
+              <p class="clint">Emily R</p>
+            </div>
+            <a href="#">Read Full Story</a>
+          </div>
+        </div>
+        <div class="Testimonials">
+          <p>
+            I enrolled in the graphic design course as a beginner, and it was the perfect starting point. The instructor's guidance and feedback improved my design abilities significantly. I'm
+            grateful for this course!
+          </p>
+
+          <div class="div-clint">
+            <div>
+              <img src="assets/image/personal3.png" alt="personal" />
+              <p class="clint">Michael K</p>
+            </div>
+            <a href="#">Read Full Story</a>
+          </div>
         </div>
       </div>
-      <div class="Testimonials">
-        <p>The UI/UX design course exceeded my expectations. The instructor's expertise and practical assignments helped me improve my design skills. I feel more confident in my career now. Thank you!</p>
-
-        <div class="div-clint">
-          <div>
-            <img src="assets/image/personal1.png" alt="personal">
-            <p class="clint">Jason M L</p>
-          </div>
-          <a href="#">Read Full Story</a>
-        </div>
-      </div>
-      <div class="Testimonials">
-        <p>The mobile app development course was fantastic! The step-by-step tutorials and hands-on projects helped me grasp the concepts easily. I'm now building my own app. Great course!</p>
-
-        <div class="div-clint">
-          <div>
-            <img src="assets/image/personal2.png" alt="personal">
-            <p class="clint">Emily R</p>
-          </div>
-          <a href="#">Read Full Story</a>
-        </div>
-      </div>
-      <div class="Testimonials">
-        <p>I enrolled in the graphic design course as a beginner, and it was the perfect starting point. The instructor's guidance and feedback improved my design abilities significantly. I'm grateful for this course!</p>
-
-        <div class="div-clint">
-          <div>
-            <img src="assets/image/personal3.png" alt="personal">
-            <p class="clint">Michael K</p>
-          </div>
-          <a href="#">Read Full Story</a>
-        </div>
-      </div>
-    </div>
     </section>
     <section>
       <div class="Our_Courses">
@@ -290,10 +304,128 @@
             Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
           </p>
         </div>
-        <div class="Benefits link-Benefits">
+        <div class="sub">
           <a class="Monthly" href="#">Monthly</a>
           <a class="Yearly" href="#">Yearly</a>
         </div>
+      </div>
+
+      <div class="pricing-card_header">
+        <div class="pricing-card">
+          <h4 class="Plan">Free Plan</h4>
+          <div class="price">$0<span>/month</span></div>
+          <div class="features">
+            <h4>Available Features</h4>
+            <ul>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Access to selected free courses.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Limited course materials and resources.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Basic community support.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />No certification upon completion.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Ad-supported platform.</li>
+              <li><img src="assets/icons/Icon Container (1).png" alt="falls" />Access to exclusive Pro Plan community forums.</li>
+              <li><img src="assets/icons/Icon Container (1).png" alt="falls" />Early access to new courses and updates.</li>
+            </ul>
+          </div>
+          <a href="#">Get Started</a>
+        </div>
+        <div class="pricing-card">
+          <h4 class="Plan">Pro Plan</h4>
+          <div class="price">$79<span>/month</span></div>
+          <div class="features">
+            <h4>Available Features</h4>
+            <ul>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Unlimited access to all courses.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Unlimited course materials and resources.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Priority support from instructors..</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Course completion certificates.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Ad-free experience.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="falls" />Access to exclusive Pro Plan community forums.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="falls" />Early access to new courses and updates.</li>
+            </ul>
+          </div>
+          <a href="#">Get Started</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="Asked">
+      <div>
+        <h3>Frequently Asked Questions</h3>
+        <p class="absolutely">Still you have any questions? Contact our Team via support@skillbridge.com</p>
+        <a href="#">See All FAQ’s</a>
+      </div>
+
+      <div>
+        <div class="quies">
+          <p>Can I enroll in multiple courses at once?</p>
+          <img src="assets/icons/x.png" alt="x" />
+        </div>
+        <p class="absolutely">Absolutely! You can enroll in multiple courses simultaneously and access them at your convenience.</p>
+        <div class="quies">
+          <p>Enrollment Process for Different Courses</p>
+          <img src="assets/icons/r.png" alt="سهم" />
+        </div>
+        <div>
+          <div class="quies">
+            <p>What kind of support can I expect from instructors?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+          <div class="quies">
+            <p>Are the courses self-paced or do they have specific start and end dates?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+          <div class="quies">
+            <p>Are there any prerequisites for the courses?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+          <div class="quies">
+            <p>Can I download the course materials for offline access?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer-section">
+      <div>
+        <div class="Connect">
+          <img class="logo" src="assets/icons/shape-17.png" alt="logo" />
+          <div>
+            <img src="assets/icons/email.png" alt="email" />
+            <p>hello@skillbridge.com</p>
+          </div>
+          <div>
+            <img src="assets/icons/call.png" alt="call" />
+            <p>+91 91813 23 2309</p>
+          </div>
+          <div>
+            <img src="assets/icons/map.png" alt="map" />
+            <p>Somewhere in the World</p>
+          </div>
+        </div>
+        <div class="Home">
+          <p>Home</p>
+          <p>Benefits</p>
+          <p>Our Courses</p>
+          <p>Our Testimonials</p>
+          <p>Our FAQ</p>
+        </div>
+        <div class="About">
+          <p>About Us</p>
+          <p>Company</p>
+          <p>Achievements</p>
+          <p>Our Goals</p>
+        </div>
+        <div class="Social">
+          <p>Social Profiles</p>
+          <div>
+            <img src="assets/icons/facebook.png" alt="facebook">
+            <img src="assets/icons/twittwe.png" alt="twittwer">
+            <img src="assets/icons/linkedin.png" alt="linkedin">
+          </div>
+        </div>
+      </div>
+      <div>
+        <p>© 2023 Skillbridge. All rights reserved.</p>
       </div>
     </section>
   </body>
