--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up</title>
+    <title>Login</title>
     <link rel="stylesheet" href="assets/styles/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet" />
   </head>
@@ -30,7 +30,7 @@
       <hr />
     </header>
 
-    <section class="">
+    <section>
       <div class="sign-up-section">
         <div class="testimonials-section">
           <div class="testimonials-header">
@@ -48,7 +48,7 @@
 
             <div class="testimonial-footer">
               <div class="testimonial-user">
-                <img src="assets/image/user.png" alt="user" class="user-img" />
+                <img src="assets/image/user2.png" alt="user" class="user-img" />
                 <p class="user-name">Sarah L</p>
               </div>
               <a href="#" class="read-more-btn">Read More</a>
@@ -67,11 +67,8 @@
 
         <div class="login-container">
           <form class="login-form">
-            <h2 class="login-title">Sign Up</h2>
-            <p class="login-subtitle">Create an account to unlock exclusive features.</p>
-
-            <label for="name" class="input-label">Full Name</label>
-            <input type="text" id="name" class="input-field" placeholder="Enter your Name" />
+            <h2 class="login-title">Login</h2>
+            <p class="login-subtitle">Welcome back! Please log in to access your account.</p>
 
             <label for="email" class="input-label">Email</label>
             <input type="email" id="email" class="input-field" placeholder="Enter your Email" />
@@ -82,8 +79,9 @@
             <div class="options-row">
               <label class="remember-me">
                 <input type="checkbox" />
-                <p class="agree">I agree with <span>Terms of Use </span> and <span>Privacy Policy</span></p>
+                Remember Me
               </label>
+              <a href="#" class="forgot-password">Forgot Password?</a>
             </div>
 
             <button type="submit" class="login-button">Login</button>
@@ -94,11 +92,11 @@
 
             <button type="button" class="google-button">
               <img src="assets/icons/google.png" alt="Google logo" class="google-icon" />
-              Sign Up with Google
+              Login with Google
             </button>
 
             <p class="signup-text">
-              Already have an account?  <a href="#" class="signup-link">Login <img class="row-top" src="assets/icons/top.png" alt="row" /></a>
+              Don’t have an account? <a href="#" class="signup-link">Sign Up <img class="row-top" src="assets/icons/top.png" alt="row" /></a>
             </p>
           </form>
         </div>
