--- a/about.html
+++ b/about.html
@@ -19,12 +19,12 @@
         <li><a href="courses-page.html">Courses</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <ul class="login">
-        <li><a href="">Sign Up</a></li>
-        <li class="log"><a href="">Login</a></li>
+        <li><a href="sign-up.html">Sign Up</a></li>
+        <li class="log"><a href="Login.html">Login</a></li>
       </ul>
     </nav>
     <hr />
