--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <nav>
         <ul class="navigation">
           <li class="logo"><img src="assets/icons/shape-17.png" alt="logo" /></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="courses-page.html">Courses</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a class="" id="homeLink" href="index.html">Home</a></li>
+          <li><a class="" id="aboutLink" href="courses-page.html">Courses</a></li>
+          <li><a class="" href="about.html">About Us</a></li>
+          <li><a class="" href="pricing.html">Pricing</a></li>
+          <li><a class="" href="contact.html">Contact</a></li>
         </ul>
-
+      
         <ul class="login">
           <li><a href="sign-up.html">Sign Up</a></li>
-          <li class="log"><a href="">Login</a></li>
+          <li class="log"><a href="Login.html">Login</a></li>
         </ul>
       </nav>
       <hr />
@@ -418,9 +418,9 @@
         <div class="Social">
           <p>Social Profiles</p>
           <div>
-            <img src="assets/icons/facebook.png" alt="facebook">
-            <img src="assets/icons/twittwe.png" alt="twittwer">
-            <img src="assets/icons/linkedin.png" alt="linkedin">
+            <img src="assets/icons/facebook.png" alt="facebook" />
+            <img src="assets/icons/twittwe.png" alt="twittwer" />
+            <img src="assets/icons/linkedin.png" alt="linkedin" />
           </div>
         </div>
       </div>
@@ -428,5 +428,9 @@
         <p>© 2023 Skillbridge. All rights reserved.</p>
       </div>
     </section>
+
+
+    <script src="assets/main .js"></script>
+
   </body>
 </html>
