--- a/courrse-open-page.html
+++ b/courrse-open-page.html
@@ -15,20 +15,21 @@
       <nav>
         <ul class="navigation">
           <li class="logo"><img src="assets/icons/shape-17.png" alt="logo" /></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="courses-page.html">Courses</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a class="" id="homeLink" href="index.html">Home</a></li>
+          <li><a class="" id="aboutLink" href="courses-page.html">Courses</a></li>
+          <li><a class="" href="about.html">About Us</a></li>
+          <li><a class="" href="pricing.html">Pricing</a></li>
+          <li><a class="" href="contact.html">Contact</a></li>
         </ul>
-
+      
         <ul class="login">
-          <li><a href="">Sign Up</a></li>
-          <li class="log"><a href="">Login</a></li>
+          <li><a href="sign-up.html">Sign Up</a></li>
+          <li class="log"><a href="Login.html">Login</a></li>
         </ul>
       </nav>
       <hr />
     </header>
+>
     <section class="intro">
       <h2>UI/UX Design Course</h2>
       <p>
