--- a/courses-page.html
+++ b/courses-page.html
@@ -17,14 +17,14 @@
         <li class="logo"><img src="assets/icons/shape-17.png" alt="logo" /></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="courses-page.html">Courses</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Pricing</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <ul class="login">
-        <li><a href="">Sign Up</a></li>
-        <li class="log"><a href="">Login</a></li>
+        <li><a href="sign-up.html">Sign Up</a></li>
+        <li class="log"><a href="Login.html">Login</a></li>
       </ul>
     </nav>
     <hr />
