--- a/pricing.html
+++ b/pricing.html
@@ -1,164 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pricing</title>
-  <link rel="stylesheet" href="assets/styles/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <header>
-    <div class="title">
-      <a href="">Free Courses 🌟 Sale Ends Soon, Get It Now <img src="assets/icons/i.png" alt="icon" /></a>
-    </div>
-    <nav>
-      <ul class="navigation">
-        <li class="logo"><img src="assets/icons/shape-17.png" alt="logo" /></li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="courses-page.html">Courses</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pricing</title>
+    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div class="title">
+        <a href="">Free Courses 🌟 Sale Ends Soon, Get It Now <img src="assets/icons/i.png" alt="icon" /></a>
+      </div>
+      <nav>
+        <ul class="navigation">
+          <li class="logo"><img src="assets/icons/shape-17.png" alt="logo" /></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="courses-page.html">Courses</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
 
-      <ul class="login">
-        <li><a href="">Sign Up</a></li>
-        <li class="log"><a href="">Login</a></li>
-      </ul>
-    </nav>
-    <hr />
-  </header>
-  <section class="intro">
-    <h2>Our Pricings</h2>
-    <p>
-      Welcome to SkillBridge's Pricing Plan page, where we offer two comprehensive options to cater to your needs: Free and Pro. We believe in providing flexible and affordable pricing options for our services. Whether you're an individual looking to enhance your skills or a business seeking professional development solutions, we have a plan that suits you. Explore our pricing options below and choose the one that best fits your requirements.
-    </p>
-    
-  </section>
-  <section>
+        <ul class="login">
+          <li><a href="sign-up.html">Sign Up</a></li>
+          <li class="log"><a href="Login.html">Login</a></li>
+        </ul>
+      </nav>
+      <hr />
+    </header>
+    <section class="intro">
+      <h2>Our Pricings</h2>
+      <p>
+        Welcome to SkillBridge's Pricing Plan page, where we offer two comprehensive options to cater to your needs: Free and Pro. We believe in providing flexible and affordable pricing options for
+        our services. Whether you're an individual looking to enhance your skills or a business seeking professional development solutions, we have a plan that suits you. Explore our pricing options
+        below and choose the one that best fits your requirements.
+      </p>
+    </section>
+    <section>
       <div class="sub sup">
         <a class="Monthly" href="#">Monthly</a>
         <a class="Yearly" href="#">Yearly</a>
       </div>
 
-    <div class="pricing-card_header">
-      <div class="pricing-card">
-        <h4 class="Plan">Free Plan</h4>
-        <div class="price">$0<span>/month</span></div>
-        <div class="features">
-          <h4>Available Features</h4>
-          <ul>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Access to selected free courses.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Limited course materials and resources.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Basic community support.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />No certification upon completion.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Ad-supported platform.</li>
-            <li><img src="assets/icons/Icon Container (1).png" alt="falls" />Access to exclusive Pro Plan community forums.</li>
-            <li><img src="assets/icons/Icon Container (1).png" alt="falls" />Early access to new courses and updates.</li>
-          </ul>
+      <div class="pricing-card_header">
+        <div class="pricing-card">
+          <h4 class="Plan">Free Plan</h4>
+          <div class="price">$0<span>/month</span></div>
+          <div class="features">
+            <h4>Available Features</h4>
+            <ul>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Access to selected free courses.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Limited course materials and resources.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Basic community support.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />No certification upon completion.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Ad-supported platform.</li>
+              <li><img src="assets/icons/Icon Container (1).png" alt="falls" />Access to exclusive Pro Plan community forums.</li>
+              <li><img src="assets/icons/Icon Container (1).png" alt="falls" />Early access to new courses and updates.</li>
+            </ul>
+          </div>
+          <a href="#">Get Started</a>
         </div>
-        <a href="#">Get Started</a>
-      </div>
-      <div class="pricing-card">
-        <h4 class="Plan">Pro Plan</h4>
-        <div class="price">$79<span>/month</span></div>
-        <div class="features">
-          <h4>Available Features</h4>
-          <ul>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Unlimited access to all courses.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Unlimited course materials and resources.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Priority support from instructors..</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Course completion certificates.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="✔" />Ad-free experience.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="falls" />Access to exclusive Pro Plan community forums.</li>
-            <li><img src="assets/icons/Icon Container.png" alt="falls" />Early access to new courses and updates.</li>
-          </ul>
+        <div class="pricing-card">
+          <h4 class="Plan">Pro Plan</h4>
+          <div class="price">$79<span>/month</span></div>
+          <div class="features">
+            <h4>Available Features</h4>
+            <ul>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Unlimited access to all courses.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Unlimited course materials and resources.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Priority support from instructors..</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Course completion certificates.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="✔" />Ad-free experience.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="falls" />Access to exclusive Pro Plan community forums.</li>
+              <li><img src="assets/icons/Icon Container.png" alt="falls" />Early access to new courses and updates.</li>
+            </ul>
+          </div>
+          <a href="#">Get Started</a>
         </div>
-        <a href="#">Get Started</a>
       </div>
-    </div>
-  </section>
-  <section class="Asked">
-    <div>
-      <h3>Frequently Asked Questions</h3>
-      <p class="absolutely">Still you have any questions? Contact our Team via support@skillbridge.com</p>
-      <a href="#">See All FAQ’s</a>
-    </div>
+    </section>
+    <section class="Asked">
+      <div>
+        <h3>Frequently Asked Questions</h3>
+        <p class="absolutely">Still you have any questions? Contact our Team via support@skillbridge.com</p>
+        <a href="#">See All FAQ’s</a>
+      </div>
 
-    <div>
-      <div class="quies">
-        <p>Can I enroll in multiple courses at once?</p>
-        <img src="assets/icons/x.png" alt="x" />
-      </div>
-      <p class="absolutely">Absolutely! You can enroll in multiple courses simultaneously and access them at your convenience.</p>
-      <div class="quies">
-        <p>Enrollment Process for Different Courses</p>
-        <img src="assets/icons/r.png" alt="سهم" />
-      </div>
       <div>
         <div class="quies">
-          <p>What kind of support can I expect from instructors?</p>
-          <img src="assets/icons/+.png" alt="+" />
+          <p>Can I enroll in multiple courses at once?</p>
+          <img src="assets/icons/x.png" alt="x" />
         </div>
+        <p class="absolutely">Absolutely! You can enroll in multiple courses simultaneously and access them at your convenience.</p>
         <div class="quies">
-          <p>Are the courses self-paced or do they have specific start and end dates?</p>
-          <img src="assets/icons/+.png" alt="+" />
-        </div>
-        <div class="quies">
-          <p>Are there any prerequisites for the courses?</p>
-          <img src="assets/icons/+.png" alt="+" />
-        </div>
-        <div class="quies">
-          <p>Can I download the course materials for offline access?</p>
-          <img src="assets/icons/+.png" alt="+" />
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="footer-section">
-    <div>
-      <div class="Connect">
-        <img class="logo" src="assets/icons/shape-17.png" alt="logo" />
-        <div>
-          <img src="assets/icons/email.png" alt="email" />
-          <p>hello@skillbridge.com</p>
+          <p>Enrollment Process for Different Courses</p>
+          <img src="assets/icons/r.png" alt="سهم" />
         </div>
         <div>
-          <img src="assets/icons/call.png" alt="call" />
-          <p>+91 91813 23 2309</p>
-        </div>
-        <div>
-          <img src="assets/icons/map.png" alt="map" />
-          <p>Somewhere in the World</p>
-        </div>
-      </div>
-      <div class="Home">
-        <p>Home</p>
-        <p>Benefits</p>
-        <p>Our Courses</p>
-        <p>Our Testimonials</p>
-        <p>Our FAQ</p>
-      </div>
-      <div class="About">
-        <p>About Us</p>
-        <p>Company</p>
-        <p>Achievements</p>
-        <p>Our Goals</p>
-      </div>
-      <div class="Social">
-        <p>Social Profiles</p>
-        <div>
-          <img src="assets/icons/facebook.png" alt="facebook">
-          <img src="assets/icons/twittwe.png" alt="twittwer">
-          <img src="assets/icons/linkedin.png" alt="linkedin">
+          <div class="quies">
+            <p>What kind of support can I expect from instructors?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+          <div class="quies">
+            <p>Are the courses self-paced or do they have specific start and end dates?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+          <div class="quies">
+            <p>Are there any prerequisites for the courses?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
+          <div class="quies">
+            <p>Can I download the course materials for offline access?</p>
+            <img src="assets/icons/+.png" alt="+" />
+          </div>
         </div>
       </div>
-    </div>
-    <div>
-      <p>© 2023 Skillbridge. All rights reserved.</p>
-    </div>
-  </section>
-
-</body>
+    </section>
+    <section class="footer-section">
+      <div>
+        <div class="Connect">
+          <img class="logo" src="assets/icons/shape-17.png" alt="logo" />
+          <div>
+            <img src="assets/icons/email.png" alt="email" />
+            <p>hello@skillbridge.com</p>
+          </div>
+          <div>
+            <img src="assets/icons/call.png" alt="call" />
+            <p>+91 91813 23 2309</p>
+          </div>
+          <div>
+            <img src="assets/icons/map.png" alt="map" />
+            <p>Somewhere in the World</p>
+          </div>
+        </div>
+        <div class="Home">
+          <p>Home</p>
+          <p>Benefits</p>
+          <p>Our Courses</p>
+          <p>Our Testimonials</p>
+          <p>Our FAQ</p>
+        </div>
+        <div class="About">
+          <p>About Us</p>
+          <p>Company</p>
+          <p>Achievements</p>
+          <p>Our Goals</p>
+        </div>
+        <div class="Social">
+          <p>Social Profiles</p>
+          <div>
+            <img src="assets/icons/facebook.png" alt="facebook" />
+            <img src="assets/icons/twittwe.png" alt="twittwer" />
+            <img src="assets/icons/linkedin.png" alt="linkedin" />
+          </div>
+        </div>
+      </div>
+      <div>
+        <p>© 2023 Skillbridge. All rights reserved.</p>
+      </div>
+    </section>
+  </body>
 </html>
